# des-archive-access

./: .gitignore  LICENSE  MANIFEST.in  README.md  blah.fits  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
des_archive_access/: cli.py  dbfiles.py  repl.py  sql.py
tests/: test_download.py  test_download_metadata.py
